<resources>
    <string name="app_name">BottonNavApp</string>
    <string name="title_home">Mi Botiquin</string>
    <string name="title_dashboard">Consejo</string>
    <string name="title_notifications">Perfil</string>

    <string name="logo">logo</string>
    <string name="usuario">Usuario</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta?</string>
    <string name="contrase_a">Contraseña</string>
    <string name="Repetir_contrase_a">Repetir Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="inciar_sesion">Inciar Sesion</string>
    <string name="nombre">Nombre</string>
    <string name="Email">Email</string>
    <string name="perfil">perfil</string>
    <string name="compra">compra</string>
    <string name="estetoscopio">Consejo</string>
    <string name="medicamento">Mi botiquin</string>
    <string name="nuevo_medicamento">Nuevo medicamento</string>
    <string name="editarperfil">EditarPerfil</string>
    <string name="borrar_usuario">Borrar Usuario</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="cancelar">Cancelar</string>
    <string name="telefono">Telefono</string>
    <string name="guardar">Guardar</string>
    <string name="escribe_un_mensaje">Escribe un mensaje</string>
    <string name="enviar">Enviar</string>
    <string name="MiBotiquin" />
    <string name="borrar_cuenta">borrar cuenta</string>
    <string name="editar_medicamento">Editar Medicamento</string>
    <string name="fecha_caducidad">Fecha Caducidad</string>
    <string name="existencias">Existencias</string>
    <string name="logo_de_la_aplicaci_n">Logo de la aplicación</string>
    <string name="con_receta">Con Receta</string>
    <string name="borrar_medicamento">Borrar medicamento</string>
    <string name="crear">Crear</string>
    <string name="logo_de_la_aplicacion">Logo de la aplicacion</string>

</resources>