<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.bottonnavapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.bottonnavapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.bottonnavapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/nuevoMedicamentoFragment"
        android:name="com.example.bottonnavapp.ui.home.NuevoMedicamentoFragment"
        android:label="@string/nuevo_medicamento"
        tools:layout="@layout/nuevo_medicamento" />

    <fragment
        android:id="@+id/editarMedicamentoFragment"
        android:name="com.example.bottonnavapp.ui.home.EditarMedicamentoFragment"
        android:label="@string/editar_medicamento"
        tools:layout="@layout/editar_medicamento">
        <!-- Añadir los argumentos necesarios para pasar los datos del medicamento -->
        <argument
            android:name="nombre"
            app:argType="string" />
        <argument
            android:name="conReceta"
            app:argType="boolean" />
        <argument
            android:name="fechaCaducidad"
            app:argType="string" />
        <argument
            android:name="cantidad"
            app:argType="integer" />
    </fragment>

</navigation>