<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkBackgroundColor">

    <Button
        android:id="@+id/buttonCancelarMed"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="60dp"
        android:text="@string/cancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Cantidad" />

    <TextView
        android:id="@+id/NombreMedicamento"
        android:layout_width="120dp"
        android:layout_height="23dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:background="@color/DarkBackgroundColor"
        android:text="@string/nombre"
        android:textColor="@color/DarkFontColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchReceta"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/Nombre"
        android:layout_width="120dp"
        android:layout_height="23dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:background="@color/DarkFontColor"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchReceta"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/Cantidad"
        android:layout_width="120dp"
        android:layout_height="23dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:background="@color/DarkFontColor"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Caducidad"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/FechaCaducidad"
        android:layout_width="120dp"
        android:layout_height="23dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:background="@color/DarkBackgroundColor"
        android:text="@string/fecha_caducidad"
        android:textColor="@color/DarkFontColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NombreMedicamento"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/Caducidad"
        android:layout_width="120dp"
        android:layout_height="23dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:background="@color/DarkFontColor"
        android:ems="10"
        android:focusable="false"
        android:importantForAutofill="no"
        android:inputType="datetime|date"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Nombre"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/CantidadDosis"
        android:layout_width="120dp"
        android:layout_height="23dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:background="@color/DarkBackgroundColor"
        android:text="@string/existencias"
        android:textColor="@color/DarkFontColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FechaCaducidad"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo_de_la_aplicaci_n" />

    <Button
        android:id="@+id/buttonNuevoMed"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="25dp"
        android:onClick="CrearMedicamento"
        android:text="@string/crear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Cantidad" />

    <Switch
        android:id="@+id/switchReceta"
        android:layout_width="163dp"
        android:layout_height="28dp"
        android:layout_marginTop="25dp"
        android:checked="true"
        android:text="@string/con_receta"
        android:textColor="@color/DarkFontColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:checked="true"
        tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>